hides some tech details

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MusicMD",
-  "name": "Music Markdown",
+  "short_name": "MusicReader",
+  "name": "Music Reader",
   "icons": [
     {
       "src": "favicon.ico",
